fix different font sizes and horizontal scrolling

--- a/reset.css
+++ b/reset.css
@@ -1,21 +1,23 @@
 /* Import Google font Open-Sans to set as default font family */
 @import url('https://fonts.googleapis.com/css?family=Open+Sans&display=swap');
 
-/* Set no extra padding and margin to all elements */
 *,
 *::before,
 *::after {
+  /* Set no extra padding and margin to all elements */
   padding: 0;
   margin: 0;
   box-sizing: border-box;
-  /* Set general font weight to normal */
+  /* Prevent horizontal scrolling */
+  overflow-x: hidden;
+  width: 100%;
+  /* Set general font-size and font weight */
+  font-size: 100%;
   font-weight: normal;
 }
 
-/* Set default font size to 10px and font family to Open Sans */
 html {
-  font-size: 62.5%;
+  /* Set default font family to Open Sans and font size to 10px */
   font-family: 'Open Sans', sans-serif;
-  width: 100%;
-  overflow-x: hidden;
+  font-size: 62.5%;
 }
